--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
       "@services/*": ["src/services/*"],
       "@components/*": ["src/components/*"],
       "@layouts/*": ["src/layouts/*"],
-      "@assets/*": ["src/assets/*"],
+      "@assets/*": ["src/assets/*"]
     }
   }
 }
